# xsh

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-artifacts.yml  ci.yml
apps/desktop/: README.md  package.json
apps/desktop/src/: App.css  App.tsx  api.ts  command-history.ts  command-library.ts  main.tsx  preferences.ts  quick-command-bar.ts  recent-sessions.ts  sensitive-command.ts  terminal-command.ts  types.ts  workspace-state.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: CommandCenterModal.tsx  CommandHistoryModal.tsx  ConnectionManagerModal.tsx  ContextMenu.tsx  DiagnosticModal.tsx  GroupEditorModal.tsx  OnboardingModal.tsx  PasswordPromptModal.tsx  PortForwardModal.tsx  QuickCommandBar.tsx  SessionBatchEditorModal.tsx  SessionEditor.tsx  SessionSidebar.tsx  SettingsModal.tsx  SftpPanel.tsx  SshConfigModal.tsx  TerminalPane.tsx  WorkspaceManagerModal.tsx
crates/xsh-domain/: Cargo.toml
crates/xsh-domain/src/: lib.rs
crates/xsh-security/: Cargo.toml
crates/xsh-security/src/: lib.rs
crates/xsh-sftp/: Cargo.toml
crates/xsh-sftp/src/: lib.rs
crates/xsh-ssh/: Cargo.toml
crates/xsh-ssh/src/: config.rs  known_hosts.rs  lib.rs
crates/xsh-storage/: Cargo.toml
crates/xsh-storage/migrations/: 0001_initial.sql
crates/xsh-storage/src/: lib.rs
docs/: architecture.md  product-spec.md  roadmap.md  v2-plan.md
scripts/: build-macos-personal.sh  build-windows.cmd  build-windows.ps1
