[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/xsh-domain",
  "crates/xsh-storage",
  "crates/xsh-ssh",
  "crates/xsh-sftp",
  "crates/xsh-security",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["XSH contributors"]

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.6.0-rc.8"
aes-gcm = "0.10.3"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
russh = "0.62.2"
russh-sftp = "2.3.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rand = "0.8.7"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh-key = { version = "0.6.7", features = ["crypto", "encryption", "getrandom"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
zeroize = "1.8.2"
