[package]
name = "xsh-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
russh.workspace = true
serde.workspace = true
ssh-key.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
xsh-domain = { path = "../xsh-domain" }
zeroize.workspace = true
